--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mobiletto-orm-scan-typedef",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "type": "module",
   "description": "Mobiletto-orm typedefs and constants for mobiletto-orm-scan",
   "keywords": [
@@ -46,11 +46,9 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
+    "mobiletto-orm-typedef": "^2.4.5",
     "prettier": "^3.0.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.1.6"
-  },
-  "dependencies": {
-    "mobiletto-orm-typedef": "^2.4.5"
   }
 }
